--- a/APRA/APRA.csproj
+++ b/APRA/APRA.csproj
@@ -181,7 +181,7 @@
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Monitor.cs" />
+    <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
