--- a/APRA.Tests/APRA.Tests.csproj
+++ b/APRA.Tests/APRA.Tests.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Model Tests\PatientModelTests.cs" />
     <Compile Include="Model Tests\PermissionModelTests.cs" />
+    <Compile Include="Model Tests\CaretakerModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
