--- a/APRA.Tests/APRA.Tests.csproj
+++ b/APRA.Tests/APRA.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Model Tests\PatientModelTests.cs" />
     <Compile Include="Model Tests\PermissionModelTests.cs" />
     <Compile Include="Model Tests\CaretakerModelTests.cs" />
+    <Compile Include="Model Tests\TaskModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
