--- a/APRA/APRA.csproj
+++ b/APRA/APRA.csproj
@@ -176,6 +176,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503141531542_seed.cs" />
+    <Compile Include="Migrations\201503141531542_seed.Designer.cs">
+      <DependentUpon>201503141531542_seed.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201503141541436_adddbtables.cs" />
+    <Compile Include="Migrations\201503141541436_adddbtables.Designer.cs">
+      <DependentUpon>201503141541436_adddbtables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Caretaker.cs" />
     <Compile Include="Models\Contact.cs" />
@@ -185,6 +194,16 @@
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CaretakerRepo.cs" />
+    <Compile Include="Repositories\ContactRepo.cs" />
+    <Compile Include="Repositories\ICaretakerRepo.cs" />
+    <Compile Include="Repositories\IContactRepo.cs" />
+    <Compile Include="Repositories\IPatientRepo.cs" />
+    <Compile Include="Repositories\IPermissionRepo.cs" />
+    <Compile Include="Repositories\ITaskRepo.cs" />
+    <Compile Include="Repositories\PatientRepo.cs" />
+    <Compile Include="Repositories\PermissionRepo.cs" />
+    <Compile Include="Repositories\TaskRepo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1037,6 +1056,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201503141531542_seed.resx">
+      <DependentUpon>201503141531542_seed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503141541436_adddbtables.resx">
+      <DependentUpon>201503141541436_adddbtables.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
